--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,8 +3,8 @@
 // For example:
 $red: #EE5F5B;
 $blue: #469AE0;
-$yellow: #FDB631;
+$yellow: #F3DFA2;
 $orange: #E67E22;
-$green: #32B796;
+$green: #7EBDC2;
 $gray: #000000;
 $light-gray: #F4F4F4;
