--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,8 +1,40 @@
 .card {
   display: flex;
-  align-items: center;
-  padding: 20px;
+  width: 1000px;
+  justify-content: flex-start;
+  padding: 0px;
   border-radius: 3px;
   transition: all 0.15s ease;
-  margin: 10px 0;
+  margin: 0;
+  margin-bottom: 30px;
+  border: 1px solid rgba(220,224,244,0.8);
+}
+
+.card-image{
+  background-color: $green;
+  width: 250px;
+  height: 200px;
+}
+
+.card-name{
+  margin-left: 30px;
+  flex-grow: 1;
+  padding-top: 20px;
+}
+.card-name h3{
+  padding: 0;
+  margin: 0;
+}
+
+.card-link {
+    font-weight: lighter;
+    color: #999999;
+    margin-bottom: 0;
+}
+
+.card-description {
+  margin-left: 50px;
+  font-size: 12px;
+  padding-top: 20px;
+  max-width: 120px;
 }
