--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,40 +1,54 @@
 .card {
   display: flex;
-  width: 1000px;
-  justify-content: flex-start;
+  justify-content: space-between;
   padding: 0px;
   border-radius: 3px;
   transition: all 0.15s ease;
-  margin: 0;
-  margin-bottom: 30px;
-  border: 1px solid rgba(220,224,244,0.8);
+  margin: 30px 0;
+  border: 1px solid $green;
+  &:hover {
+    position: relative;
+    top: -5px;
+    box-shadow: 2px 2px 3px $green;
+  }
 }
 
-.card-image{
+.card-image {
   background-color: $green;
-  width: 250px;
+  flex: 0 0 250px;
+  // width: 250px;
   height: 200px;
 }
 
-.card-name{
+.card-name {
   margin-left: 30px;
   flex-grow: 1;
   padding-top: 20px;
 }
-.card-name h3{
+
+.card-name h3 {
   padding: 0;
   margin: 0;
 }
 
+.card-name p {
+  margin-top: 50px;
+}
+
 .card-link {
-    font-weight: lighter;
-    color: #999999;
-    margin-bottom: 0;
+  font-weight: lighter;
+  color: #999999;
+  margin-bottom: 0;
+  font-size: 15px;
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 .card-description {
   margin-left: 50px;
   font-size: 12px;
   padding-top: 20px;
-  max-width: 120px;
+  flex: 0 0 250px;
+  padding-right: 20px;
 }
