home page + search form ok

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-image 0.3s ease;
 }
 .banner h1 {
   font-size: 50px;
