--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" data-images="<%= image_path 'banner-1.jpg' %>,<%= image_path 'banner-2.jpg' %>,<%= image_path 'banner-3.jpg' %>">
+<div class="banner" data-images="<%= image_url 'banner-1.jpg' %>,<%= image_url 'banner-2.jpg' %>,<%= image_url 'banner-3.jpg' %>">
   <div class="banner-content">
     <h1>We are Familive</h1>
     <p>
