--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,12 @@
       <br>
       <br>
       <br>
-      <%= render 'families/search_form' %>
+      <%= simple_form_for(Family.new, url: :families, method: :get, html: { class: 'form-inline' }) do |f| %>
+        <%= f.input :price, placeholder: "$ Price", label: false %>
+        <%= f.input :capacity, placeholder: "How many people?", label: false %>
+        <%= f.input :night, label: false, placeholder: "How many nights?" %>
+        <%= f.submit class:'btn btn-success', value: "Search" %>
+      <% end %>
     </div>
   </div>
 </div>
