new form les bros

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,11 +8,17 @@
       <br>
       <br>
       <br>
-      <%= simple_form_for(Family.new, url: :families, method: :get, html: { class: 'form-inline' }) do |f| %>
+    <!--   <%= simple_form_for(Family.new, url: :families, method: :get, html: { class: 'form-inline' }) do |f| %>
         <%= f.input :price, placeholder: "$ Price", label: false %>
         <%= f.input :capacity, placeholder: "How many people?", label: false %>
         <%= f.input :night, label: false, placeholder: "How many nights?" %>
         <%= f.submit class:'btn btn-success', value: "Search" %>
+      <% end %> -->
+      <%= form_tag("/families", method: "get", class: 'form-inline') do %>
+        <%= text_field_tag :price, nil, placeholder: '$ Price', class:'input' %>
+        <%= text_field_tag :capacity, nil, placeholder: 'How many people?', class:'input' %>
+        <%= text_field_tag :price, nil, placeholder: 'How many nights?', class:'input' %>
+        <%= submit_tag "Search", class:'btn btn-success' %>
       <% end %>
     </div>
   </div>
