--- a/app/views/families/new.html.erb
+++ b/app/views/families/new.html.erb
@@ -14,6 +14,8 @@
     <%= f.input :description %>
     <%= f.input :capacity %>
     <%= f.input :price_pppn %>
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
     <%= f.submit "Add a family", class: "btn btn-primary" %>
   <% end %>
 </div>
