Display image in index

--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -3,6 +3,7 @@
   <% @families.each do |family| %>
     <div class="card">
       <div class="card-image">
+        <%= cl_image_tag @family.photo %>
         <%= link_to "", family_path(family) %>
       </div>
       <div class="card-name">
