--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Search results</h2>
+  <h2>Choose your ideal family from the list below</h2>
   <% @families.each do |family| %>
     <div class="card">
       <div class="card-image">
