added .jpg on christmas tree

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,7 +41,7 @@
       </div>
       <div class="col-md-6">
         <div class="photo">
-          <%= image_tag 'christmas_tree' %>
+          <%= image_tag 'christmas_tree.jpg' %>
         </div>
       </div>
     </div>
