--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,13 +55,13 @@
   </h2>
   <div class="reviews">
     <a href="#" class="dead-links">
-     <%= image_tag 'techcrunch' %>
+     <%= image_tag 'techcrunch.png' %>
     </a>
     <a href="#" class="dead-links">
-      <%= image_tag 'Le_Monde' %>
+      <%= image_tag 'Le_Monde.png' %>
     </a>
     <a href="#" class="dead-links">
-      <%= image_tag 'Logo_Challenges' %>
+      <%= image_tag 'Logo_Challenges.png' %>
     </a>
   </div>
 </div>
