Updated recommendation by Le Wagon

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,7 +58,7 @@
      <%= image_tag 'techcrunch.png' %>
     </a>
     <a href="#" class="dead-links">
-      <%= image_tag 'Le_Monde.png' %>
+      <%= image_tag 'le_wagon.png' %>
     </a>
     <a href="#" class="dead-links">
       <%= image_tag 'Logo_Challenges.png' %>
