--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -42,6 +42,7 @@ form {
   padding: 50px;
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 .dead-links {
   background-image: cover;
