--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -8,15 +8,24 @@
         <%= link_to "", family_path(family) %>
       </div>
       <div class="card-name">
+      <%= link_to "link to booking show", booking_path(booking) %>
         <h3><%= link_to family.name, family_path(family) %></h3>
       </div>
     </div>
     <% end %>
-
-
-
   <% end %>
 </div>
 
+<div class="container">
+  <div class="form-wrapper" style="width: 400px; margin: 0 auto;">
+      <h2>Booking Form</h2>
+      <%= simple_form_for :booking do |f| %>
+      <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+      <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"}  %>
+        <%= f.button :submit, "Book now!", class: "btn btn-success" %>
+      <% end %>
+  </div>
+</div>
 
- <%= link_to "make a new search" %>
+
+ <p><%= link_to "make a new search" %></p>
