--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon<%= ' navbar-wagon-transparent' if params[:action] == 'home' %>">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= image_tag "logo.png", height: 50 %>
+    <i class="fas fa-certificate"></i>
   <% end %>
 
   <!-- Right Navigation -->
