--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,6 +5,6 @@ $red: #EE5F5B;
 $blue: #469AE0;
 $yellow: #F3DFA2;
 $orange: #E67E22;
-$green: #BEDDE0;
+$green: #4DD0B0;
 $gray: #000000;
 $light-gray: #F4F4F4;
