--- a/app/assets/stylesheets/layouts/_profile.scss
+++ b/app/assets/stylesheets/layouts/_profile.scss
@@ -29,7 +29,9 @@
   grid-row: 1 / span 1;
   grid-column: 4 / span 1;
   text-align: center;
-  padding-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   margin: 10px;
   background-color: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
@@ -39,7 +41,9 @@
   grid-row: 1 / span 1;
   grid-column: 5 / span 1;
   text-align: center;
-  padding-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   margin: 10px;
   background-color: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
