--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
+@import url('https://fonts.googleapis.com/css?family=Comfortaa:400,700|Montserrat:400,400i,500,600,700,800,900|Source+Sans+Pro:400,400i,600,600i,700,900,900i');
 
 // Define fonts for body and headers
-$body-font: "Open Sans", "Helvetica", "sans-serif";
-$headers-font: "Raleway", "Helvetica", "sans-serif";
+$body-font: "Open Sans", "Source Sans Pro", "sans-serif";
+$headers-font: "Comfortaa", "Source Sans Pro", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
