--- a/app/assets/stylesheets/layouts/_profile.scss
+++ b/app/assets/stylesheets/layouts/_profile.scss
@@ -50,7 +50,7 @@
 }
 
 .card-form {
-  grid-row: 3 / span 2;
+  grid-row: 2 / span 2;
   grid-column: 4 / span 2;
   margin: 10px;
   background-color: white;
@@ -58,20 +58,20 @@
 }
 
 .card-back {
-  grid-row: 2 / span 1;
+  grid-row: 4 / span 1;
   grid-column: 4 / span 2;
   margin: 10px;
   background-color: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
   text-align: center;
-  padding: 20px;
+  padding: 30px;
 }
 
 .card-back a {
   color: black;
   &:hover {
   text-decoration: none;
-  font-weight: 600;
+  font-weight: 700;
   }
 }
 
@@ -81,6 +81,22 @@
 
 .title {
   color: $green;
-  font-weight: 600;
+  font-weight: 700;
 }
 
+.form-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.simple_form {
+  text-align: center;
+  padding: 25px;
+}
+
+// label {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-around;
+// }
