--- a/app/views/shared/_bookingform.html.erb
+++ b/app/views/shared/_bookingform.html.erb
@@ -1,11 +1,12 @@
-<div class="container">
-  <div class="form-wrapper" style="width: 400px; margin: 0 auto;">
-      <h2>Booking Form</h2>
-
-      <%= simple_form_for [@family, @booking] do |f| %>
+<!-- <h3 class="text-center">Booking Form</h3> -->
+<div class="form-box">
+  <div class="form-item">
+    <%= simple_form_for [@family, @booking] do |f| %>
       <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
       <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"}  %>
-        <%= f.button :submit, "Book now!", class: "btn btn-success" %>
-      <% end %>
+      <%= f.button :submit, "Book now!", class: "btn btn-success" %>
+    <% end %>
   </div>
 </div>
+
+
