--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,1 +1,16 @@
-<h2> Booking </h2>
+<div class="container">
+  <h2> Booking: </h2>
+  <h2><%= @family.name %></h2>
+  <%= cl_image_tag @family.photo, height: 400, width: 500  %>
+  <p><%= @family.description %></p>
+  <p><%= "For #{@family.capacity} people max" %></p>
+  <p><%= "#{@family.price_pppn}€/day/person" %></p>
+</div>
+
+<% if policy(@booking).edit? %>
+  <%= link_to "Edit", edit_family_path(@booking) %>
+<% end %>
+
+<% if policy(@booking).destroy? %>
+  <%= link_to "Delete", family_path(@booking), method: :delete, data: { confirm: "Are you sure you want to delete this booking?" } %>
+<% end %>
