--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,8 +2,9 @@
 .input {
   font-size: 20px;
   border-radius: 5px;
-  color: #1d6168;
+  color: $green;
   padding: 4px;
+  border-color: $green;
 }
 
 form {
