--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -1,29 +1,34 @@
-
 <div class="container">
   <div class="grid">
-    <div class="card-photo" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+    <div class="grid-photo" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
          url('<%= cl_image_path @family.photo, crop: :fill %>')" >
     </div>
-    <div class="card-desc">
-      <h2 class="title"><%= @family.name %></h2>
-      <p><%= @family.description %></p>
+    <div class="grid-desc">
+      <div class="desc-child">
+        <h2 class="title"><%= @family.name %></h2>
+        <p><%= @family.description %></p>
+      </div>
     </div>
-    <div class="card-capacity">
+    <div class="grid-capacity">
       <p>For <%= @family.capacity %> <strong class="gras">max</strong></p>
     </div>
-    <div class="card-price">
+    <div class="grid-price">
       <p>Per day: <strong><%= @family.price_pppn.to_i %></strong><i class="fas fa-euro-sign"></i><strong>/</strong><i class="fas fa-male"></i></p>
     </div>
-    <div class="card-form">
-      <%= render 'shared/bookingform' %>
+    <div class="grid-form">
+      <div class="form-child">
+        <%= render 'shared/bookingform' %>
+      </div>
     </div>
-     <div class="card-back">
+    <div class="grid-back">
+      <div class="back-child">
         <p>Don't like this family?</p>
         <%= link_to families_path do %>
           <i class="fa fa-undo" aria-hidden="true"></i>
           <span>Back to the list</span>
         <% end %>
       </div>
+    </div>
   </div>
 </div>
   <% if policy(@family).edit? %>
