--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,6 +13,7 @@
   top: 0px;
   height: 250px;
   box-shadow: 0px 8px 6px -8px rgba(0,0,0,0.4);
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));
   img {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -33,6 +34,9 @@
   padding: 0;
   margin: 5px 0 0 0;
   font-weight: lighter;
+  li {
+    width: 135px;
+  }
 }
 
 .check-card-details {
@@ -55,9 +59,6 @@
   opacity: 0.8;
   font-weight: lighter;
   font-size: 16px;
-  i {
-    padding: 0 0 0 80px;
-  }
   p {
     margin: 0;
     padding: 0 80px 0 0;
@@ -68,3 +69,5 @@
     color: white;
   }
 }
+
+
