--- a/app/assets/stylesheets/layouts/_profile.scss
+++ b/app/assets/stylesheets/layouts/_profile.scss
@@ -5,7 +5,7 @@
   grid-template-rows: 25% 25% 25% 25%;
 }
 
-.card-photo {
+.grid-photo {
   grid-row: 1 / span 2;
   grid-column: 1 / span 3;
   background-size: cover;
@@ -14,7 +14,7 @@
 }
 
 
-.card-desc {
+.grid-desc {
   grid-row: 3 / span 2;
   grid-column: 1 / span 3;
   text-align: justify;
@@ -22,10 +22,13 @@
   background-color: white;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 
-.card-capacity {
+.grid-capacity {
   grid-row: 1 / span 1;
   grid-column: 4 / span 1;
   text-align: center;
@@ -37,7 +40,7 @@
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
 }
 
-.card-price {
+.grid-price {
   grid-row: 1 / span 1;
   grid-column: 5 / span 1;
   text-align: center;
@@ -49,15 +52,18 @@
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
 }
 
-.card-form {
+.grid-form {
   grid-row: 2 / span 2;
   grid-column: 4 / span 2;
   margin: 10px;
   background-color: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.card-back {
+.grid-back {
   grid-row: 4 / span 1;
   grid-column: 4 / span 2;
   margin: 10px;
@@ -65,13 +71,16 @@
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
   text-align: center;
   padding: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.card-back a {
+.grid-back a {
   color: black;
   &:hover {
-  text-decoration: none;
-  font-weight: 700;
+    text-decoration: none;
+    font-weight: 700;
   }
 }
 
