--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,17 +20,19 @@
     <div class="row">
       <div class="col-md-6">
         <div class="content">
-          <h4>Who said you can't <strong>choose your family?</strong></h4>
-          <p>Here @Familive, we think that no one should spend Christmas (or any other special occasion) alone. That's why, thanks to us, you can rent a family for you to have some company during those times.</p>
-          <div class="list">
-            <ul class="list-unstyled left">
-              <li><i class="fas fa-tree"></i><span> Christmas</span></li>
-              <li><i class="fas fa-gift"></i><span> Birthdays</span></li>
-            </ul>
-            <ul class="list-unstyled right">
-              <li><i class="fas fa-wine-glass"></i><span> Parties</span></li>
-              <li><i class="fas fa-plane"></i><span> Holidays</span></li>
-            </ul>
+          <div class="content-child">
+            <h4>Who said you can't <strong>choose your family?</strong></h4>
+            <p>Here @Familive, we think that no one should spend Christmas (or any other special occasion) alone. That's why, thanks to us, you can rent a family for you to have some company during those times.</p>
+            <div class="list">
+              <ul class="list-unstyled left">
+                <li><i class="fas fa-tree"></i><span> Christmas</span></li>
+                <li><i class="fas fa-gift"></i><span> Birthdays</span></li>
+              </ul>
+              <ul class="list-unstyled right">
+                <li><i class="fas fa-wine-glass"></i><span> Parties</span></li>
+                <li><i class="fas fa-plane"></i><span> Holidays</span></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
