linked to Booking in Navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
         <i class="fas fa-plus"></i> Add your family
         <% end %>
       <% end %>
-      <%= link_to("Bookings", family_bookings_path, class: "navbar-wagon-item navbar-wagon-link") %>
+      <%= link_to "Bookings", profile_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
