--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -62,16 +62,12 @@ form {
   padding-top: 35px;
 }
 
-.left {
-  flex-item: 0 0 auto;
+.icon-left {
   padding: 10px;
-  height: 200px;
 }
 
-.right {
-  flex-item: 0 0 auto;
+.icon-right {
   padding: 10px;
-  height: 200px;
 }
 
 .content {
