--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -10,7 +10,7 @@
   <% if params[:night].present? && params[:capacity].present? %>
     <p></p>
   <% else %>
-    <p style="font-size:10px"><i>*All of our prices are given per person & per night.</i></p>
+    <p style="font-size:10px"><i>*All of our prices are given per person & per night
   <% end %>
   <div class="row">
     <% @families.each do |family| %>
