a lot of little changes

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   transition: background-image 0.3s ease;
+  padding-top: 40vh;
 }
 .banner h1 {
   font-size: 50px;
