--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,6 +10,7 @@
   justify-content: space-between;
   &.navbar-wagon-transparent {
     background: transparent;
+    transition: 0.5s background-color ease;
     position: absolute;
     width: 100%;
     box-shadow: none;
