--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -45,9 +45,9 @@ form {
   justify-content: space-around;
   align-items: center;
 }
+
 .dead-links {
-  background-image: cover;
-  flex-item: 0 0 auto;
+  flex: 0 0 auto;
 }
 
 .list {
