--- a/app/views/shared/_bookingform.html.erb
+++ b/app/views/shared/_bookingform.html.erb
@@ -2,6 +2,7 @@
 <div class="form-box">
   <div class="form-item">
     <%= simple_form_for [@family, @booking] do |f| %>
+      <%= f.input :price %>
       <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
       <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"}  %>
       <%= f.button :submit, "Book now!", class: "btn btn-success" %>
