--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,5 +1,5 @@
 .card {
-  height: 400px;
+  height: 425px;
   width: 350px;
   box-shadow: 1px 1px 3px rgba(0,0,0,0.6);
   background-color: white;
@@ -38,6 +38,24 @@
     width: 135px;
   }
 }
+
+#profile-container {
+  .card-description ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .card-description li {
+    flex: 0 0 50%;
+  }
+
+  .card-description li:last-child {
+    flex: 0 0 100%;
+    padding-bottom: 10px;
+  }
+}
+
 
 .check-card-details {
   height: 40px;
