--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,4 +1,36 @@
-<h1> <%= current_user.last_name current_user.first_name %></h1>
+<div id='profile-container' class="container">
+  <h2 class="section-title-home">
+    <div class="section-title-home-content" style="font-size:30px;">
+      Hello, <%= current_user.first_name %> <%= current_user.last_name %>
+    </div>
+  </h2>
+   <div class="row">
+  <h3>Find your bookings below</h3>
+    <% @bookings.each do |booking| %>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card">
+          <div class="card-image">
+              <%= cl_image_tag booking.family.photo, height: 250, width: 350, crop: :fill, gravity: :north %>
+           </div>
+           <div class="card-name">
+            <h3><%= booking.family.name %></h3>
+          </div>
+          <div class="card-description">
+            <ul class="list-inline">
+              <li><i class="fas fa-male"></i> <strong><%= booking.number_guests%> guests</strong></li>
+              <li>Price: <strong><%= booking.family.price_pppn.to_i* params[:night].to_i*params[:capacity].to_i %><i class="fas fa-euro-sign"></i></strong></li>
+              <li> <em> From </em> <%= booking.start_date %> <em>to</em> <%= booking.end_date%>
+              </li>
+            </ul>
+          </div>
+          <div class="check-card-details">
+              <i class="far fa-check-circle"></i>
+              <span>Confirmed</span>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
 
-<%= bookings.each do |booking| %>
-<%=
+
