--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,9 +3,9 @@
 
   </div>
   <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="https://github.com/Picoco"><i class="fab fa-github"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.facebook.com/Familive-1847111578927337/"><i class="fab fa-facebook"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
