--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -59,13 +59,16 @@
   opacity: 0.8;
   font-weight: lighter;
   font-size: 16px;
+  padding: 0;
+  border: none;
+  background: none;
   p {
     margin: 0;
     padding: 0 80px 0 0;
   }
   &:hover {
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18px;
     color: white;
   }
 }
