--- a/app/views/shared/_bookingform.html.erb
+++ b/app/views/shared/_bookingform.html.erb
@@ -4,9 +4,35 @@
     <%= simple_form_for [@family, @booking] do |f| %>
       <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
       <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"}  %>
+      <%= f.input :capacity, input_html: { value: params[:capacity] } %>
+      <%= f.input :price, input_html: { data: { price_pppn: params[:price_pppn] }} %>
+
       <%= f.button :submit, "Book now!", class: "btn btn-success" %>
     <% end %>
   </div>
 </div>
 
 
+<script>
+  const startDate = document.getElementById("booking_start_date");
+  const endDate = document.getElementById("booking_end_date");
+  const price = document.getElementById("booking_price");
+  const capacity = document.getElementById("booking_capacity");
+  updatePrice(startDate);
+  updatePrice(capacity);
+
+  function updatePrice(element) {
+    if (element) {
+      element.addEventListener('input',(event) => {
+        const stringDates = startDate.value;
+        const price_pppn = parseInt(price.getAttribute('data-price-pppn'));
+        const dates = stringDates.split(" to ");
+        if (dates.length === 2) {
+          const newStartDate = new Date(dates[0]);
+          const newEndDate = new Date (dates[1]);
+          price.value = parseInt((newEndDate - newStartDate) / (1000*3600*24))*price_pppn*capacity.value;
+        };
+      });
+    };
+  }
+</script>
