--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -59,3 +59,16 @@ li {
 .form-check-label {
   padding: 10px;
 }
+
+#booking-tabs {
+    margin: 0px;
+    padding: 0px;
+    margin-top: 20px;
+  }
+
+#booking-pad {
+    margin: 0px;
+    padding: 0px;
+    margin-bottom: 20px !important;
+  }
+
