--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,4 +1,4 @@
-<div id='profile-container' class="container">
+<div class="container">
   <h2 class="section-title-home">
     <div class="section-title-home-content" style="font-size:30px;">
       Hello, <%= current_user.first_name %> <%= current_user.last_name %>
@@ -18,7 +18,7 @@
           <h3>Find your bookings below</h3>
           <% @bookings.each do |booking| %>
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="card">
+              <div id='profile-container' class="card">
                 <div class="card-image">
                   <%= cl_image_tag booking.family.photo, height: 250, width: 350, crop: :fill, gravity: :north %>
                 </div>
@@ -31,7 +31,7 @@
                     </li>
                     <li>Price: <strong><%= booking.family.price_pppn.to_i* params[:night].to_i*params[:capacity].to_i %><i class="fas fa-euro-sign"></i></strong>
                     </li>
-                    <li> <em> From </em> <%= booking.start_date %> <em>to</em> <%= booking.end_date%>
+                    <li><strong>From</strong> <em> <%= booking.start_date %></em> <strong>to</strong> <em><%= booking.end_date%></em>
                     </li>
                   </ul>
                 </div>
@@ -48,9 +48,35 @@
         <div class="row">
           <h3>Find your families below</h3>
             <%  current_user.families.each do |family|  %>
-            <%= family.name %>
-            <% end %>
+              <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="card">
+                  <div class="card-image">
+                    <%= cl_image_tag family.photo, height: 250, width: 350, crop: :fill, gravity: :north %>
+                  </div>
+                  <div class="card-name">
+                    <h3><%= family.name %></h3>
+                  </div>
+                  <div class="card-description">
+                    <ul class="list-inline">
+                      <li><i class="fas fa-male"></i> <strong><%= family.capacity %> guests</strong>
+                      </li>
+                      <li>Price: <strong><%= family.price_pppn %><i class="fas fa-euro-sign"></i></strong>
+                      </li>
+                    </ul>
+                  </div>
+                  <div id="family" class="check-card-details">
 
+                      <%= link_to edit_family_path(family) do %>
+                        <i class="fam far fa-edit"></i>
+                      <% end %>
+                      <%= link_to family_path(family), method: :delete, data: { confirm: "Are you sure you want to delete this family?" } do %>
+                        <i class="fam far fa-trash-alt"></i>
+                      <% end %>
+
+                  </div>
+                </div>
+              </div>
+            <% end %>
         </div>
       </div>
   </div>
