--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -28,18 +28,14 @@
       </div>
     </div>
   </div>
-</div>
   <% if policy(@family).edit? %>
-    <%= link_to "Edit", edit_family_path(@family) %>
+    <%= link_to "Edit", edit_family_path(@family), class:'btn btn-primary' %>
   <% end %>
 
   <% if policy(@family).destroy? %>
-    <%= link_to "Delete", family_path(@family), method: :delete, data: { confirm: "Are you sure you want to delete this family?" } %>
+    <%= link_to "Delete", family_path(@family), method: :delete, data: { confirm: "Are you sure you want to delete this family?" }, class:'btn btn-danger' %>
   <% end %>
-
-<% if policy(@family).edit? %>
-  <%= link_to "Edit", edit_family_path(@family) %>
-<% end %>
+</div>
 
 
 
